CI: Run on all changed files

--- a/.github/workflows/lein-test.yaml
+++ b/.github/workflows/lein-test.yaml
@@ -2,14 +2,10 @@
 name: lein_test
 
 on:
-  workflow_dispatch:
+  pull_request: {}
   push:
     branches:
       - main
-    paths: ['src/**','test/**', 'project.clj']
-  pull_request:
-    types: [opened, reopened, edited, synchronize]
-    paths: ['src/**','test/**', 'project.clj']
 
 jobs:
   run-lein-tests:
