Tell Renovate not to update Jetty major
For some reason, even though we close the PR, it keeps wanting to update the major. Since we create a separate repo on a new major, this tells it to just ignore all major updates for Jetty components.

--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,12 @@
   "automerge": true,
   "automergeType": "pr",
   "dependencyDashboard": true,
-  "enabledManagers": ["leiningen"]
+  "enabledManagers": ["leiningen"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["org.eclipse.jetty*"],
+      "matchUpdateTypes": ["major"],
+      "enabled": false
+    }
+  ]
 }
